Modified the files for servo 1 control

--- a/Altera DE2-115 method/Quartus/Servo_1/db/servo.lpc.html
+++ b/Altera DE2-115 method/Quartus/Servo_1/db/servo.lpc.html
@@ -240,15 +240,31 @@
 <TD >0</TD>
 </TR>
 <TR >
+<TD >pwm</TD>
+<TD >28</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >motor</TD>
 <TD >3</TD>
+<TD >1</TD>
 <TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >18</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
+<TD >1</TD>
+<TD >44</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
