Modified the code

--- a/Altera DE2-115 method/Quartus/LFSR_32bit/db/Display.lpc.html
+++ b/Altera DE2-115 method/Quartus/LFSR_32bit/db/Display.lpc.html
@@ -272,6 +272,22 @@
 <TD >0</TD>
 </TR>
 <TR >
+<TD >clk_0_25hz</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >lfsr</TD>
 <TD >2</TD>
 <TD >0</TD>
